# VLMHyperBench

./: .env_example  .gitignore  README.md  benchmark_run_config.py  create_default_cfg.py  pyproject.toml  run_benchmark.py  user_config.csv  user_config_model_eval.csv  user_config_prompt_eval.csv
benchmark_scheduler/: benchmark_orchestrator.py  user_config_reader.py
config_manager/: config_manager.py
notebooks/: testing_reading_the_user_config.ipynb  user_config_2.csv
pipeline/scripts/: reader.py  run_vlm.py  writer.py
vlmhyperbench/: vlm_base.csv
vlmhyperbench/bench_stages/: run_eval.py  run_rpo.py  run_vlm.py
vlmhyperbench/cfg/: BenchmarkRunConfig.json  VLMHyperBench_config.json  eval_run_requirements.txt  vlm_run_requirements.txt
vlmhyperbench/data_dirs/Datasets/VQA/demo_mini/: annotation.csv
vlmhyperbench/data_dirs/Datasets/VQA/midv-2020-rus-mini/: annotation.csv
vlmhyperbench/data_dirs/PromptCollections/VQA/demo_mini/: JuliaJu_Qwen2-VL-2B_demo_mini_cer0.csv  JuliaJu_Qwen2-VL-7B_demo_mini_cer0.csv  JuliaJu_Qwen2_5-VL-3B_demo_mini_008.csv  JuliaJu_Qwen2_5-VL-7B_demo_mini_cer0.csv  Qwen2-VL-2B_demo_mini.csv
vlmhyperbench/data_dirs/PromptCollections/VQA/midv-2020-rus-min/: Qwen2-VL-7B_midv-2020-rus-mini.csv  Qwen2_5-VL-3B_midv-2020-rus-mini.csv  Qwen2_5-VL-7B_midv-2020-rus-mini.csv
vlmhyperbench/system_dirs/bench_stages/: run_eval.py  run_vlm.py
vlmhyperbench/system_dirs/cfg/: BenchmarkRunConfig.json  VLMHyperBench_config.json  eval_run_requirements.txt  vlm_run_requirements.txt
