[tool.poetry]
name = "vlmhyperbench"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
config-manager = {git = "https://github.com/VLMHyperBenchTeam/config_manager.git", rev = "0.1.0"}
benchmark-scheduler = {git = "https://github.com/VLMHyperBenchTeam/benchmark_scheduler.git", rev = "0.1.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
