[project]
name = "vlmhyperbench"
version = "0.1.3"
description = "VLMHyperBench EvalKit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "benchmark-run-config @ git+https://github.com/VLMHyperBenchTeam/benchmark_run_config.git@0.1.4",
    "config-manager @ git+https://github.com/VLMHyperBenchTeam/config_manager.git@0.1.2",
    "docker>=7.1.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 88